# scapula

./: .gitmodules  CMakeLists.txt  LICENSE.txt  Makefile  README.md  config.cmake
bootloader/include/: boot.h  bootloader.h  bootloader_common.h  bootloader_config.h  bootloader_print.h  cache.h  interrupt_vectors.h  launch_vmm.h  microlib.h  regs.h  regs_guarded.h  scapula_aarch64_accessor_macros.h  switch_exception_level.h  util.h
bootloader/src/: CMakeLists.txt  boot.c  bootloader.c  bootloader_common.c  cache.c  interrupt_vectors.c  interrupt_vectors.s  launch_vmm.c  main.c  microlib.c  platform.c  printf.c  serial_8250_mini.c  serial_pl011_primecell.c  start.s  switch_exception_level.c  switch_exception_level.s  uart_tegra.s  util.s
scapula/: CMakeLists.txt  __init__.py  __main__.py
scapula/filter/: __init__.py  register_has_imp_def.py  register_has_res0.py  register_has_res1.py
scapula/gadget/: __init__.py  execute_at.py  license.py  main_function.py  switch_to_el1.py  testcase.py
scapula/generator/: __init__.py  example_generator.py  read_aarch32_generator.py  read_imp_def_generator.py  read_res0_generator.py  read_res1_generator.py  scapula_generator.py  settable_imp_def_generator.py  settable_res0_generator.py  settable_res1_generator.py  test_generator.py  undefined_instruction_generator.py  undefined_register_generator.py  util.py
scapula/transform/: __init__.py  encoded_rt_to_r9.py  only_imp_def.py  only_res0.py  only_res1.py  unique_imp_def.py  unique_res0.py  unique_res1.py
scapula/writer/: __init__.py  formating.py  logic.py  message.py  register.py  scapula_os.py  variable.py
scapula_loader/: CMakeLists.txt
scapula_loader/include/: bfelf_loader.h  bfelf_loader_private.h  bftypes.h  run_test_cases.h
scapula_loader/src/: loader.lds  main.c  run_test_cases.c  start.s
scapula_os/include/: cmake_config.h  exception_level.h  init.h  panic.h  print.h  scapula_aarch64_accessor_macros.h
scapula_os/src/: CMakeLists.txt  assert_fail.c  banners.c  exception_level.c  init.c  main.c  panic.c  serial_8250_uart.c  serial_pl011_primecell.c  start.s
scapula_os/src/aarch64/: CMakeLists.txt  exception_level.c  init.c  interrupt_vectors.c  serial_pl011_primecell.c
scripts/cmake/: init_project.cmake  init_subproject.cmake  targets.cmake  validate.cmake
scripts/cmake/build_generated/aarch32/: CMakeLists.txt
scripts/cmake/build_generated/aarch64/: CMakeLists.txt  start.s
scripts/cmake/build_generated/images/: CMakeLists.txt
scripts/cmake/config/: default.cmake  jetson_tx1.cmake  jetson_tx2.cmake  sail.cmake
scripts/cmake/depends/: PatchedLibfdtMakefile  dtc.cmake  libc.cmake  libfdt.cmake  libmemory.cmake  meson-cross-file.txt  meson.cmake  shoulder.cmake  xml_specs.cmake
scripts/cmake/flags/: aarch32_flags.cmake  aarch64_flags.cmake
scripts/cmake/macros/: add_custom_target_category.cmake  add_custom_target_info.cmake  add_dependency.cmake  add_subproject.cmake  download_dependency.cmake  generate_flags.cmake  include_external_config.cmake  macros.cmake  print_banner.cmake  print_usage.cmake  right_justify.cmake
scripts/cmake/toolchain/: aarch64-linux-gnu-gcc.cmake  arm-linux-gnueabihf-gcc.cmake
scripts/device_tree/: bfvmm.its  bootloader.its  jetson-tx1-with-kernel-commandline.dts  sail.dts  testcases.its
scripts/linker/: bootloader.lds  scapula_os.lds
